[gd_scene load_steps=21 format=2]

[ext_resource path="res://Game/UI/Theme/Theme.tres" type="Theme" id=1]
[ext_resource path="res://Game/UI/Screen/SettingScreen/SettingsMenu.gd" type="Script" id=2]
[ext_resource path="res://Game/UI/Screen/Background/Rectangle/rectangle.png" type="Texture" id=3]
[ext_resource path="res://Resource/Buttons/Return-1-v2.png" type="Texture" id=4]
[ext_resource path="res://Resource/Buttons/Return-2.png" type="Texture" id=5]
[ext_resource path="res://Game/UI/Screen/Background/Rectangle/ParallaxRectangle.tscn" type="PackedScene" id=7]
[ext_resource path="res://Resource/Fonts/Bungee-Regular.ttf" type="DynamicFontData" id=8]

[sub_resource type="DynamicFontData" id=2]
font_path = "res://Game/UI/ArnesonBold-oEvz.ttf"

[sub_resource type="DynamicFont" id=3]
font_data = SubResource( 2 )

[sub_resource type="Theme" id=4]
Label/colors/font_color = Color( 1, 1, 1, 1 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 0 )
Label/colors/font_outline_modulate = Color( 1, 1, 1, 1 )
Label/fonts/font = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 9
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=6]
size = 9
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=7]
size = 9
font_data = ExtResource( 8 )

[sub_resource type="DynamicFont" id=10]
size = 9
font_data = ExtResource( 8 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="SettingsMenu" type="Popup"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.702
theme = SubResource( 4 )
script = ExtResource( 2 )

[node name="StaticBackground" type="Sprite" parent="."]
position = Vector2( 160, 300 )
texture = ExtResource( 3 )

[node name="Back" type="TouchScreenButton" parent="."]
position = Vector2( 10, 10 )
scale = Vector2( 0.1, 0.1 )
normal = ExtResource( 4 )
pressed = ExtResource( 5 )
action = "back"

[node name="GridContainer" type="GridContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 50.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = -50.0
custom_constants/vseparation = 5
custom_constants/hseparation = 20
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
margin_top = 3.0
margin_right = 113.0
margin_bottom = 13.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 5 )
text = "Music Volume"

[node name="MusicVolume" type="HSlider" parent="GridContainer"]
margin_left = 133.0
margin_right = 220.0
margin_bottom = 16.0
size_flags_horizontal = 11
size_flags_vertical = 1
theme = ExtResource( 1 )
min_value = -24.0
max_value = 24.0

[node name="Label2" type="Label" parent="GridContainer"]
margin_top = 24.0
margin_right = 113.0
margin_bottom = 34.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 6 )
text = "Effect Volume"

[node name="EffectVolume" type="HSlider" parent="GridContainer"]
margin_left = 133.0
margin_top = 21.0
margin_right = 220.0
margin_bottom = 37.0
size_flags_horizontal = 11
size_flags_vertical = 1
theme = ExtResource( 1 )
min_value = -24.0
max_value = 24.0

[node name="Label4" type="Label" parent="GridContainer"]
margin_top = 45.0
margin_right = 113.0
margin_bottom = 55.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Swap Input Controls"

[node name="SwapInput" type="CheckBox" parent="GridContainer"]
margin_left = 133.0
margin_top = 42.0
margin_right = 220.0
margin_bottom = 58.0
custom_constants/hseparation = 9
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/hover_pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "off"
icon_align = 1

[node name="Label5" type="Label" parent="GridContainer"]
margin_top = 66.0
margin_right = 113.0
margin_bottom = 76.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 7 )
text = "Show Timer"

[node name="TimerStatus" type="CheckBox" parent="GridContainer"]
margin_left = 133.0
margin_top = 63.0
margin_right = 220.0
margin_bottom = 79.0
custom_constants/hseparation = 9
custom_fonts/font = SubResource( 10 )
custom_styles/hover = SubResource( 11 )
custom_styles/pressed = SubResource( 12 )
custom_styles/focus = SubResource( 13 )
custom_styles/disabled = SubResource( 14 )
custom_styles/hover_pressed = SubResource( 15 )
custom_styles/normal = SubResource( 16 )
text = "off"
icon_align = 1

[node name="ParallaxRectangle" parent="." instance=ExtResource( 7 )]
pause_mode = 2
visible = false

[connection signal="run_background" from="." to="." method="_on_SettingsMenu_run_background"]
[connection signal="released" from="Back" to="." method="_on_Back_released"]
[connection signal="value_changed" from="GridContainer/MusicVolume" to="." method="_on_MusicVolume_value_changed"]
[connection signal="value_changed" from="GridContainer/EffectVolume" to="." method="_on_EffectVolume_value_changed"]
[connection signal="pressed" from="GridContainer/SwapInput" to="." method="_on_SwapInput_pressed"]
[connection signal="pressed" from="GridContainer/TimerStatus" to="." method="_on_TimerStatus_pressed"]
